--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
 
 
-  <title>Quizzer</title>
+  <title>Quiz Quest</title>
 </head>
 <body>
 
