--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
 </head>
 <body>
 
-  <!--Intro music
+  <!--Intro music-->
   <audio id="intro" autoplay>
     <source src="./shared/intro.ogg" type="audio/ogg">
       <source src="./shared/intro.mp3" type="audio/mp3">
   </audio>
--->
+
   <!-- MAIN CONTENT -->
   <section class="hero is-fullheight">
      <!-- Content will be injected here -->
